Fix table of contents padding alignment

--- a/_sass/_og.scss
+++ b/_sass/_og.scss
@@ -256,6 +256,7 @@ pre {
 
 // Make the ToC a whole section
 .toc .col + .col {
+  padding: 0;
   background-color: #fff;
 }
 
